@@ -1,7 +1,6 @@
 language: python
 matrix:
   include:
-    - python: "2.7"
     - python: "3.5"
     - python: "3.6"
     - python: "3.7"
