@@ -40,8 +40,8 @@ respecting the standard procedures in each system:
 * Use standard configuration space in ``/etc`` on traditional production servers
 * Handle environment-based configuration for cloud-based platforms
 
-``getconf`` v1.10 onwards supports Python 2.7, Python 3.5, 3.6 and 3.7 and is distributed under the two-clause BSD license.
-v1.9.x are the last versions to support 3.4.
+``getconf`` v1.10 onwards supports Python 3.5, 3.6 and 3.7 and is distributed under the two-clause BSD license.
+v1.9.x are the last versions to support 2.7 and 3.4.
 v1.8.x are the last versions to support 3.3.
 The latest version of ``getconf`` to support Python 2.6 is v1.5.1.
 
